# Qt-Guitar-Pedal

./: CMakeLists.txt  Main.qml  README.md  main.cpp
